# candy-case-study

./: pyproject.toml
data/processed/: candy-data-processed.csv
notebooks/: 01_eda.ipynb  02_feature_selection.ipynb  03_modelling.ipynb  04_recommendation.ipynb  coeff.csv
outputs/: Final Deliverables.pptx  Next Steps Notes.txt
outputs/models/gpr/: combined_model.joblib  model.joblib  model_prediction.csv  scaler.joblib
outputs/models/lr/: combined_model.joblib  model.joblib
outputs/notes/: Notes.docx  ~$Notes.docx  ~WRL0003.tmp
outputs/presentation_plots/: ppt_plots.xlsx
src/: eda_plotting.py  full_factorial_design_space_generator.py
src/ml/: cross_validation_executor.py  evaluate_feature_importance_using_permutation_importance.py  gridcv.py  hyperparameter_optimisers.py  kfold_cross_validation_executor.py  ml_model_experiment.py  ml_model_experiment_utilities.py  ml_model_predictor.py  ml_model_reader.py  model_evaluator_on_split_data.py  model_prediction_data_analyser.py  recursive_feature_elimination.py  shuffle.py  standardise_train_test_data.py  tarin_test_split_scikit.py  train_evaluate_save_ml_model.py  tsne_visualiser.py
src/ml/interfaces/: iml_model.py  iscaler.py  itrain_test_split.py
src/ml/plotting/: plotly_lib.py
tests/: test_ml_experiment.py  test_ml_model_predictor.py
tests/test_data/: test_data.csv
