[project]
name = "candy-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask-ml>=2025.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mock>=5.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
